fix: z-index and type of variants

--- a/src/styles/components/Loader.module.css
+++ b/src/styles/components/Loader.module.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--loader-background);
+  z-index: 20;
 }
 
 .loader > svg.icon {
